k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intelligtest-ingress
  namespace: intelligtest-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: api.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                
                port:
                  number: 3000
